show search results before contacts list. Alleviates an issue where the list would jump because the contacts list (above) was updating.

--- a/src/main/resources/scss/contacts/components/_contacts-list.scss
+++ b/src/main/resources/scss/contacts/components/_contacts-list.scss
@@ -1,3 +1,5 @@
-ul.contacts-list.users {
-	margin-bottom: 2rem;
+.contacts-page {
+	.contacts-search-results {
+		margin-bottom: 2rem;
+	}
 }
